[tool.poetry]
name = "s3-pypi-proxy"
version = "0.0.0"
description = "Turn an S3 bucket into a PyPI repo"
license = "MIT"
authors = ["Josh Bode <joshbode@fastmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
s3-pypi-proxy = "s3_pypi_proxy:main"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.22.6"
Flask = "^2.1.2"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
boto3-stubs = {extras = ["s3"], version = "^1.22.7"}
ipython = "^8.3.0"
pdbpp = "^0.10.3"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100
float_to_top = true
skip_gitignore = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
